Progress - still some issues on mobile

--- a/static/css/specific.css
+++ b/static/css/specific.css
@@ -45,7 +45,7 @@ h1 {
 	line-height:44px;
 	font-family: 'Muli', sans-serif;
 	font-weight:400;
-	color:blue;
+	color:#0063af;
 	text-align:center;
 	margin-bottom:24px;
 }
@@ -54,7 +54,7 @@ h1 {
 	line-height:24px;
 	font-family: 'Muli', sans-serif;
 	font-weight:400;
-	color:blue;
+	color:#0063af;
 }
 }
 
